--- a/styles/theme/components/_monthly-panel.scss
+++ b/styles/theme/components/_monthly-panel.scss
@@ -24,6 +24,9 @@
         position: relative;
         top:30px;
         left:8px;
+        @include breakpoint-down(medium){
+            left:0px;
+        }
     }
     button{
         cursor: pointer;
