--- a/styles/theme/pages/_chat.scss
+++ b/styles/theme/pages/_chat.scss
@@ -4,11 +4,27 @@
     left:0px;
     padding:20px;
     @include createFlex(row,space-between,flex-start,null);
+    @include breakpoint-down(medium){
+        @include createFlex(row,space-between,flex-start,wrap);
+    }
     &__left-panel{
         width: 50%;
         margin-right: 20px;
+        @include breakpoint-down(medium){
+            width:100%;
+            margin:0px;
+        }
     }
     &__right-panel{
         width: 50%;
+        @include breakpoint-down(medium){
+            width:100%;
+        }
+        .search{
+            margin-top:20px;
+            input{
+                width:67%;
+            }
+        }
     }
 }
