--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -58,18 +58,53 @@ a{
     color:white;
     text-decoration: none;
 }
+
+.font-bold{
+    font-weight:bold;
+}
+
 .container{
     overflow:hidden;
     width: 100vw;
     max-width: 100vw;
     height:100vh;
     animation: fadeInWithOutMoving 1s ease-in-out forwards;
-    @include createFlex(row,space-between,flex-start,null);
+    @include createFlex(row,space-between,stretch,null);
+      @include breakpoint-down(medium){
+          overflow:visible;
+      }
+    @include breakpoint-down(small){
+        height:100%;
+        overflow-x:hidden;
+
+    }
 }
 .container-inner{
     height:100vh;
     width: 80%;
     overflow-y:scroll;
     background-color:$cornflower-blue;
+    @include breakpoint-down(medium-sm){
+        position:relative;
+        left: 10%;
+        top:0px;
+        width: 90%;
+        overflow-x: visible;
+        overflow-y:visible;
 
+    }
+    @include breakpoint-down-l(medium-sm){
+        left: 8%;
+        width:92%;
+    }
+
+    @include breakpoint-down(small){
+        left: 20%;
+        width:80%;
+        overflow-y:visible;
+    }
+    @media (max-device-width:540px) and (max-device-height:720px) and (orientation:portrait){
+        left: 14%;
+        width:86%;
+    }
 }
