--- a/styles/theme/components/_navbar.scss
+++ b/styles/theme/components/_navbar.scss
@@ -8,6 +8,14 @@
     height:70px;
     z-index: 1000;
     background-color: $item;
+    @include breakpoint-down(medium-sm){
+        width: 90%;
+        left:10%;
+    }
+      @include breakpoint-down-l(medium-sm){
+        width: 92%;
+        left:8%;
+    }
     svg{
         cursor: pointer;
         &:hover{
@@ -20,6 +28,9 @@
         position:relative;
         top:0px;
         left:0px;
+        @include breakpoint-down(small){
+            display: none;
+        }
     }
     &__matches{
         position:absolute;
@@ -86,6 +97,12 @@
         @include createFlex(row,flex-end,center,null);
         & > div{
             margin:0px 15px;
+        }
+        @include breakpoint-down(small){
+            margin-left:50px;
+        }
+        @media(max-device-width:375px){
+            margin-left:30px;
         }
     }
     &__languages{
