--- a/styles/theme/components/_todo.scss
+++ b/styles/theme/components/_todo.scss
@@ -5,6 +5,9 @@
     border-radius: 15px;
     padding:0px 20px;
     animation:fadeIn 1s ease-in-out forwards;
+    @include breakpoint-down(small){
+        padding:0px 10px;
+    }
     &__heading{
         position: relative;
         top:0px;
@@ -19,6 +22,9 @@
         margin-right:auto;
         margin-left:10px;
         transform:translateX(-20px);
+        @include breakpoint-down(small){
+            display:none;
+        }
     }
     &__type-controls{
         position:relative;
@@ -94,6 +100,9 @@
     &__field{
         padding:10px;
         @include createFlex(row,center,center,null);
+        @include breakpoint-down(small){
+            @include createFlex(row,center,center,wrap);
+        }
         input{
             padding:10px;
             width: 100%;
@@ -106,6 +115,9 @@
             font-weight: bold;
             border-bottom: 2px solid transparent;
             transition:all 0.3s ease-in-out;
+            @include breakpoint-down(small){
+                border-radius:5px;
+            }
             &::placeholder{
                 color:white;
                 font-style:italic;
@@ -126,6 +138,9 @@
             border:0px;
             background-color: yellowgreen;
             border-bottom: 2px solid transparent;
+            @include breakpoint-down(small){
+                width:75%;
+            }
             &:active{
                 outline:none;
             }
@@ -138,6 +153,10 @@
         input{
             border-radius: 0px;
             transform:translateX(-65%) translateY(10%) scale(2);
+            @include breakpoint-down(small){
+                border-top-left-radius: 5px;
+                border-bottom-left-radius: 5px;
+            }
         }
         input[type="date"]::-webkit-calendar-picker-indicator {
             filter: invert(100%);
@@ -248,6 +267,10 @@
     }
     &__footer{
         @include createFlex(row,center,center,null);
+        @include breakpoint-down(small){
+            overflow-x:scroll;
+            @include createFlex(row,flex-start,center,null);
+        }
         button{
             cursor: pointer;
             margin:0px 3px;
