--- a/styles/theme/pages/_contacts.scss
+++ b/styles/theme/pages/_contacts.scss
@@ -6,5 +6,28 @@
     &__search{
         margin-bottom:10px;
         text-align: right;
+        .search{
+            @include breakpoint-down(small){
+                width:100%;
+                @include createFlex(row,center,center,wrap);
+            }
+            button{
+                font-size:pxToRem(12);
+                min-width: fit-content;
+                width:85px;
+                @include breakpoint-down(small){
+                    width:100%;
+                    border-radius:25px !important;
+                }
+           
+            }
+            input{
+                @include breakpoint-down(small){
+                    width:100%;
+                    max-width:100%;
+                    border-radius:25px;
+                }
+            }
+        }
     }
 }
