--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -99,11 +99,11 @@ a{
     }
 
     @include breakpoint-down(small){
-        left: 20%;
-        width:80%;
+        left: 0%;
+        width:100%;
         overflow-y:visible;
     }
-    @media (max-device-width:540px) and (max-device-height:720px) and (orientation:portrait){
+    @media (min-device-width:540px) and (min-device-height:720px) and (max-device-width:540px) and (max-device-height:720px) and (orientation:portrait){
         left: 14%;
         width:86%;
     }
